--- a/views/admin/item/detail_item/view_detail_item.ejs
+++ b/views/admin/item/detail_item/view_detail_item.ejs
@@ -22,7 +22,6 @@
             <h1 class="h3 mb-4 text-gray-800">Item Page</h1>
             <!-- End Heading-->
 
-            <% if(action == 'view') { %>
             <ul class="nav nav-tabs" id="myTab" role="tablist">
               <li class="nav-item">
                 <a class="nav-link active" id="home-tab" data-toggle="tab" href="#show-feature" role="tab" aria-controls="home" aria-selected="true">Show Feature</a>
@@ -32,7 +31,8 @@
               </li>
             </ul>
             <div class="tab-content" id="myTabContent">
-            
+              <%- include('show_features.ejs') %> 
+              <%- include('show_activity.ejs') %> 
             </div>
           </div>
           <!-- /.container-fluid -->
@@ -95,6 +95,10 @@
    <%- include('../../../partials/js.ejs') %>
     <!-- End Bootstrap core JavaScript-->
     <script>
+      $(document).ready(function() {
+        $("#dataTableActivity").DataTable();
+      })
+
       CKEDITOR.replace( 'about' );
     </script>
   </body>
