--- a/views/admin/item/detail_item/show_activity.ejs
+++ b/views/admin/item/detail_item/show_activity.ejs
@@ -1,4 +1,4 @@
-<div class="tab-pane fade show active" id="show-activity">
+<div class="tab-pane fade" id="show-activity">
   <div class="card shadow mb-4 mt-2">
     <div class="card-body">
       <div class="row">
