--- a/views/admin/item/detail_item/show_features.ejs
+++ b/views/admin/item/detail_item/show_features.ejs
@@ -9,7 +9,7 @@
       <div class="row">
         <div class="col-md-5">
           <form
-            action="/admin/bank"
+            action="/admin/item/add/feature"
             method="POST"
             enctype="multipart/form-data"
           >
@@ -37,6 +37,7 @@
               <label for="name">Image</label>
               <input type="file" class="form-control" name="image" required />
             </div>
+            <input type="hidden" value="<%= itemId %>" />
             <button type="submit" class="btn btn-primary">save</button>
           </form>
         </div>
