--- a/views/admin/item/detail_item/show_features.ejs
+++ b/views/admin/item/detail_item/show_features.ejs
@@ -37,7 +37,7 @@
               <label for="name">Image</label>
               <input type="file" class="form-control" name="image" required />
             </div>
-            <input type="hidden" value="<%= itemId %>" />
+            <input type="hidden" value="<%= itemId %>" name="itemId" />
             <button type="submit" class="btn btn-primary">save</button>
           </form>
         </div>
@@ -58,7 +58,45 @@
                   <th>Action</th>
                 </tr>
               </thead>
-              <tbody></tbody>
+              <tbody>
+                <% for(let i = 0; i < feature.length; i++){ %>
+                <tr>
+                  <td><%= i + 1%></td>
+                  <td><%= feature[i].name %></td>
+                  <td><%= feature[i].qty %></td>
+                  <td>
+                    <img
+                      src="http://localhost:3000/<%= feature[i].imageUrl %> "
+                      alt="imageUrl"
+                      height="70px"
+                      width="70px"
+                    />
+                  </td>
+                  <td>
+                    <form
+                      action="/admin/item/<%= itemId %>/feature/<%= feature[i].id %>?_method=DELETE"
+                      method="POST"
+                    >
+                      <a
+                        href="javascript:void()"
+                        type="button"
+                        class="btn btn-warning btn-circle btn-sm button-update"
+                        data-id="<%= feature[i].id %>"
+                        data-name="<%= feature[i].name %>"
+                        data-namefeature="<%= feature[i].namefeature %>"
+                        ><i class="fas fa-edit"></i
+                      ></a>
+                      <button
+                        type="submit"
+                        class="btn btn-danger btn-circle btn-sm"
+                      >
+                        <i class="fas fa-trash"></i>
+                      </button>
+                    </form>
+                  </td>
+                </tr>
+                <% } %>
+              </tbody>
             </table>
           </div>
         </div>
