--- a/views/admin/item/detail_item/view_detail_item.ejs
+++ b/views/admin/item/detail_item/view_detail_item.ejs
@@ -94,12 +94,35 @@
     <!-- Bootstrap core JavaScript-->
    <%- include('../../../partials/js.ejs') %>
     <!-- End Bootstrap core JavaScript-->
+    <%- include('show_modal_activity.ejs') %> 
+    <%- include('show_modal_feature.ejs') %> 
+
     <script>
       $(document).ready(function() {
         $("#dataTableActivity").DataTable();
       })
 
       CKEDITOR.replace( 'about' );
+
+       $("#dataTableActivity").on("click", ".button-update", function () {
+      let id = $(this).data("id");
+      let name = $(this).data("name");
+      let type = $(this).data('type')
+      $("#edit-modal").modal("show");
+      $(".id").val(id);
+      $(".name").val(name);
+      $(".type").val(type)
+  });
+
+      $("#dataTable").on("click", ".button-update", function () {
+      let id = $(this).data("id");
+      let name = $(this).data("name");
+      let qty = $(this).data('qty')
+      $("#edit-modal").modal("show");
+      $(".id").val(id);
+      $(".name").val(name);
+      $(".qty").val(qty)
+  });
     </script>
   </body>
 </html>
