--- a/views/admin/item/detail_item/show_modal_activity.ejs
+++ b/views/admin/item/detail_item/show_modal_activity.ejs
@@ -1,7 +1,7 @@
 <!-- Modal -->
 <div
   class="modal fade"
-  id="edit-modal"
+  id="edit-modal-activity"
   tabindex="-1"
   role="dialog"
   aria-labelledby="exampleModalLabel"
@@ -10,7 +10,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Update activity</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Update Activity</h5>
         <button
           type="button"
           class="close"
@@ -32,7 +32,7 @@
               type="text"
               class="form-control name"
               name="name"
-              placeholder="Enter Name"
+              placeholder="Enter name"
               required
             />
           </div>
@@ -42,14 +42,14 @@
               type="text"
               class="form-control type"
               name="type"
-              placeholder="Enter QTY"
+              placeholder="Enter type"
               required
             />
           </div>
           <div class="form-group">
             <label for="name">Image</label>
             <input type="file" class="form-control" name="image" />
-            <span>Pilih Gambar Untuk Update Image</span>
+            <span>Pilih gambar untuk update image</span>
           </div>
         </div>
         <div class="modal-footer">
