--- a/views/admin/bank backup/add_modal.ejs
+++ b/views/admin/bank backup/add_modal.ejs
@@ -1,7 +1,7 @@
 <!-- Modal -->
 <div
   class="modal fade"
-  id="edit-modal-feature"
+  id="add-modal"
   tabindex="-1"
   role="dialog"
   aria-labelledby="exampleModalLabel"
@@ -10,7 +10,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Update Feature</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Add Bank</h5>
         <button
           type="button"
           class="close"
@@ -20,45 +20,48 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <form
-        action="/admin/item/update/feature?_method=PUT"
-        method="POST"
-        enctype="multipart/form-data"
-      >
+      <form action="/admin/bank" method="POST" enctype="multipart/form-data">
         <div class="modal-body">
           <div class="form-group">
-            <label for="name">Name</label>
+            <label for="name">Name Bank</label>
             <input
               type="text"
-              class="form-control name"
-              name="name"
-              placeholder="Enter name"
+              class="form-control"
+              name="nameBank"
+              placeholder="Enter Name Bank"
               required
             />
           </div>
           <div class="form-group">
-            <label for="name">QTY</label>
+            <label for="name">Nomor Rekening</label>
             <input
-              type="number"
-              class="form-control qty"
-              name="qty"
-              placeholder="Enter qty"
+              type="text"
+              class="form-control"
+              name="nomorRekening"
+              placeholder="Enter Nomor Rekening"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input
+              type="text"
+              class="form-control"
+              name="name"
+              placeholder="Enter Name"
               required
             />
           </div>
           <div class="form-group">
             <label for="name">Image</label>
-            <input type="file" class="form-control" name="image" />
-            <span>Pilih gambar untuk update image</span>
+            <input type="file" class="form-control" name="image" required />
           </div>
         </div>
         <div class="modal-footer">
-          <input type="hidden" class="id" name="id" />
-          <input type="hidden" value="<%= itemId %>" name="itemId" />
           <button type="button" class="btn btn-secondary" data-dismiss="modal">
             Close
           </button>
-          <button type="submit" class="btn btn-primary">Update</button>
+          <button type="submit" class="btn btn-primary">Add</button>
         </div>
       </form>
     </div>
