--- a/views/admin/bank backup/edit_modal.ejs
+++ b/views/admin/bank backup/edit_modal.ejs
@@ -1,7 +1,7 @@
 <!-- Modal -->
 <div
   class="modal fade"
-  id="edit-modal-feature"
+  id="edit-modal"
   tabindex="-1"
   role="dialog"
   aria-labelledby="exampleModalLabel"
@@ -10,7 +10,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Update Feature</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Update Bank</h5>
         <button
           type="button"
           class="close"
@@ -21,40 +21,49 @@
         </button>
       </div>
       <form
-        action="/admin/item/update/feature?_method=PUT"
+        action="/admin/bank?_method=PUT"
         method="POST"
         enctype="multipart/form-data"
       >
         <div class="modal-body">
+          <div class="form-group">
+            <label for="name">Name Bank</label>
+            <input
+              type="text"
+              class="form-control nameBank"
+              name="nameBank"
+              placeholder="Enter Name Bank"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="name">Nomor Rekening</label>
+            <input
+              type="text"
+              class="form-control nomorRekening"
+              name="nomorRekening"
+              placeholder="Enter Nomor Rekening"
+              required
+            />
+          </div>
           <div class="form-group">
             <label for="name">Name</label>
             <input
               type="text"
               class="form-control name"
               name="name"
-              placeholder="Enter name"
-              required
-            />
-          </div>
-          <div class="form-group">
-            <label for="name">QTY</label>
-            <input
-              type="number"
-              class="form-control qty"
-              name="qty"
-              placeholder="Enter qty"
+              placeholder="Enter Name"
               required
             />
           </div>
           <div class="form-group">
             <label for="name">Image</label>
             <input type="file" class="form-control" name="image" />
-            <span>Pilih gambar untuk update image</span>
+            <span>Pilih Gambar Untuk Update Image</span>
           </div>
         </div>
         <div class="modal-footer">
           <input type="hidden" class="id" name="id" />
-          <input type="hidden" value="<%= itemId %>" name="itemId" />
           <button type="button" class="btn btn-secondary" data-dismiss="modal">
             Close
           </button>
