--- a/views/admin/item/detail_item/show_activity.ejs
+++ b/views/admin/item/detail_item/show_activity.ejs
@@ -1,4 +1,5 @@
 <div class="tab-pane fade" id="show-activity">
+  <!-- DataTales Example -->
   <div class="card shadow mb-4 mt-2">
     <div class="card-body">
       <div class="row">
@@ -14,7 +15,7 @@
                 type="text"
                 class="form-control"
                 name="name"
-                placeholder="Enter Name"
+                placeholder="Enter name"
                 required
               />
             </div>
@@ -49,21 +50,20 @@
                   <th>No</th>
                   <th>Name</th>
                   <th>Type</th>
-                  <th>Image Url</th>
+                  <th>Image URL</th>
                   <th>Action</th>
                 </tr>
               </thead>
               <tbody>
                 <% for(let i = 0; i < activity.length; i++){ %>
                 <tr>
-                  <td><%= i + 1%></td>
+                  <td><%= i + 1 %></td>
                   <td><%= activity[i].name %></td>
                   <td><%= activity[i].type %></td>
                   <td>
                     <img
-                      src="http://localhost:3000/<%= activity[i].imageUrl %> "
+                      src="http://localhost:3000/<%= activity[i].imageUrl %>"
                       alt="imageUrl"
-                      height="70px"
                       width="70px"
                     />
                   </td>
@@ -73,7 +73,7 @@
                       method="POST"
                     >
                       <a
-                        href="javascript:void()"
+                        href="javascript:void();"
                         type="button"
                         class="btn btn-warning btn-circle btn-sm button-update"
                         data-id="<%= activity[i].id %>"
