--- a/views/admin/item/detail_item/view_detail_item.ejs
+++ b/views/admin/item/detail_item/view_detail_item.ejs
@@ -1,128 +1,126 @@
-<%- include('../../../partials/header.ejs') %> 
-    <!-- Page Wrapper -->
-    <div id="wrapper">
+<%- include('../../../partials/header.ejs') %>
 
-      <!-- Sidebar -->
-      <%- include('../../../partials/sidebar.ejs') %> 
-      <!-- End Sidebar -->
+<!-- Page Wrapper -->
+<div id="wrapper">
+  <%- include('../../../partials/sidebar.ejs') %>
 
-      <!-- Content Wrapper -->
-      <div id="content-wrapper" class="d-flex flex-column">
-        <!-- Main Content -->
-        <div id="content">
-          <!-- Topbar -->
-          <%- include('../../../partials/navbar.ejs')  %>
-          <!-- End Of Topbar -->
+  <!-- Content Wrapper -->
+  <div id="content-wrapper" class="d-flex flex-column">
+    <!-- Main Content -->
+    <div id="content">
+      <%- include('../../../partials/navbar.ejs') %>
 
-          <!-- Begin Page Content -->
-          <div class="container-fluid">
+      <!-- Begin Page Content -->
+      <div class="container-fluid">
+        <%- include('../../../partials/message.ejs') %>
 
-            <%- include('../../../partials/message.ejs') %>
-            <!-- Page Heading -->
-            <h1 class="h3 mb-4 text-gray-800">Item Page</h1>
-            <!-- End Heading-->
+        <!-- Page Heading -->
+        <h1 class="h3 mb-4 text-gray-800">Detail Item</h1>
+        <!-- End Heading -->
 
-            <ul class="nav nav-tabs" id="myTab" role="tablist">
-              <li class="nav-item">
-                <a class="nav-link active" id="home-tab" data-toggle="tab" href="#show-feature" role="tab" aria-controls="home" aria-selected="true">Show Feature</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#show-activity" role="tab" aria-controls="profile" aria-selected="false">Show Activity</a>
-              </li>
-            </ul>
-            <div class="tab-content" id="myTabContent">
-              <%- include('show_features.ejs') %> 
-              <%- include('show_activity.ejs') %> 
-            </div>
-          </div>
-          <!-- /.container-fluid -->
-        </div>
-        <!-- End of Main Content -->
-
-        <!-- Footer -->
-       <%- include('../../../partials/footer.ejs') %>
-        <!-- End of Footer -->
-      </div>
-      <!-- End of Content Wrapper -->
-    </div>
-    <!-- End of Page Wrapper -->
-
-    <!-- Scroll to Top Button-->
-    <a class="scroll-to-top rounded" href="#page-top">
-      <i class="fas fa-angle-up"></i>
-    </a>
-
-    <!-- Logout Modal-->
-    <div
-      class="modal fade"
-      id="logoutModal"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-            <button
-              class="close"
-              type="button"
-              data-dismiss="modal"
-              aria-label="Close"
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+          <li class="nav-item">
+            <a
+              class="nav-link active"
+              id="home-tab"
+              data-toggle="tab"
+              href="#show-feature"
+              role="tab"
+              aria-controls="home"
+              aria-selected="true"
+              >Show Feature</a
             >
-              <span aria-hidden="true">×</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            Select "Logout" below if you are ready to end your current session.
-          </div>
-          <div class="modal-footer">
-            <button
-              class="btn btn-secondary"
-              type="button"
-              data-dismiss="modal"
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              id="profile-tab"
+              data-toggle="tab"
+              href="#show-activity"
+              role="tab"
+              aria-controls="profile"
+              aria-selected="false"
+              >Show Activity</a
             >
-              Cancel
-            </button>
-            <a class="btn btn-primary" href="login.html">Logout</a>
-          </div>
+          </li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+          <%- include('show_feature.ejs') %> <%- include('show_activity.ejs') %>
         </div>
       </div>
+      <!-- /.container-fluid -->
     </div>
+    <!-- End of Main Content -->
 
-    <!-- Bootstrap core JavaScript-->
-   <%- include('../../../partials/js.ejs') %>
-    <!-- End Bootstrap core JavaScript-->
-    <%- include('show_modal_activity.ejs') %> 
-    <%- include('show_modal_feature.ejs') %> 
+    <%- include('../../../partials/footer.ejs') %>
+  </div>
+  <!-- End of Content Wrapper -->
+</div>
+<!-- End of Page Wrapper -->
 
-    <script>
-      $(document).ready(function() {
-        $("#dataTableActivity").DataTable();
-      })
+<!-- Scroll to Top Button-->
+<a class="scroll-to-top rounded" href="#page-top">
+  <i class="fas fa-angle-up"></i>
+</a>
 
-      CKEDITOR.replace( 'about' );
-
-       $("#dataTableActivity").on("click", ".button-update", function () {
-      let id = $(this).data("id");
-      let name = $(this).data("name");
-      let type = $(this).data('type')
-      $("#edit-modal").modal("show");
-      $(".id").val(id);
-      $(".name").val(name);
-      $(".type").val(type)
+<!-- Logout Modal-->
+<div
+  class="modal fade"
+  id="logoutModal"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+        <button
+          class="close"
+          type="button"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Select "Logout" below if you are ready to end your current session.
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-secondary" type="button" data-dismiss="modal">
+          Cancel
+        </button>
+        <a class="btn btn-primary" href="login.html">Logout</a>
+      </div>
+    </div>
+  </div>
+</div>
+<%- include('show_modal_activity.ejs') %> <%- include('show_modal_feature.ejs')
+%> <%- include('../../../partials/js.ejs') %>
+<script>
+  $("#dataTable").on("click", ".button-update", function () {
+    let id = $(this).data("id");
+    let name = $(this).data("name");
+    let qty = $(this).data("qty");
+    $("#edit-modal-feature").modal("show");
+    $(".id").val(id);
+    $(".name").val(name);
+    $(".qty").val(qty);
   });
 
-      $("#dataTable").on("click", ".button-update", function () {
-      let id = $(this).data("id");
-      let name = $(this).data("name");
-      let qty = $(this).data('qty')
-      $("#edit-modal").modal("show");
-      $(".id").val(id);
-      $(".name").val(name);
-      $(".qty").val(qty)
+  $(document).ready(function () {
+    $("#dataTableActivity").DataTable();
   });
-    </script>
-  </body>
-</html>
+  CKEDITOR.replace("about");
+  $("#dataTableActivity").on("click", ".button-update", function () {
+    let id = $(this).data("id");
+    let name = $(this).data("name");
+    let type = $(this).data("type");
+    $("#edit-modal-activity").modal("show");
+    $(".id").val(id);
+    $(".name").val(name);
+    $(".type").val(type);
+  });
+</script>
