login and logout feature

--- a/views/admin/booking/table_booking.ejs
+++ b/views/admin/booking/table_booking.ejs
@@ -21,6 +21,44 @@
             <th>Action</th>
           </tr>
         </thead>
+        <tbody>
+          <% for(let i = 0; i < booking.length; i++){ %>
+          <tr>
+            <td><%= i + 1%></td>
+            <td><%= booking[i].namebooking %></td>
+            <td><%= booking[i].nomorRekening %></td>
+            <td><%= booking[i].name %></td>
+            <td>
+              <img
+                src="http://localhost:3000/<%= booking[i].imageUrl %> "
+                alt="imageUrl"
+                height="70px"
+                width="70px"
+              />
+            </td>
+            <td>
+              <form
+                action="/admin/booking/<%= booking[i].id %>?_method=DELETE"
+                method="POST"
+              >
+                <a
+                  href="javascript:void()"
+                  type="button"
+                  class="btn btn-warning btn-circle btn-sm button-update"
+                  data-id="<%= booking[i].id %>"
+                  data-name="<%= booking[i].name %>"
+                  data-namebooking="<%= booking[i].namebooking %>"
+                  data-nomorrekening="<%= booking[i].nomorRekening %>"
+                  ><i class="fas fa-edit"></i
+                ></a>
+                <button type="submit" class="btn btn-danger btn-circle btn-sm">
+                  <i class="fas fa-trash"></i>
+                </button>
+              </form>
+            </td>
+          </tr>
+          <% } %>
+        </tbody>
       </table>
     </div>
   </div>
