--- a/views/admin/booking/show_table_detail_booking.ejs
+++ b/views/admin/booking/show_table_detail_booking.ejs
@@ -1,8 +1,19 @@
 <!-- DataTales Example -->
 <div class="card shadow mb-4 mt-2">
+  <div class="card-header py-3">
+    <a href="/admin/booking" class="btn btn-warning">Back</a>
+  </div>
   <div class="card-body">
     <div class="row">
-      <div class="col-md-4">//isi</div>
+      <div class="col-md-4"> 
+        <img
+            src="http://localhost:3000/<%= booking.payments.proofPayment %> "
+            alt="image"
+            style="width: 100%; display: block"
+          />
+        </div>
+      </div>
+       <div class="row"></div>
       <div class="col-md-8">
         <div class="table-responsive">
           <table
