--- a/views/admin/booking/show_detail_booking.ejs
+++ b/views/admin/booking/show_detail_booking.ejs
@@ -16,6 +16,7 @@
 
           <!-- Begin Page Content -->
           <div class="container-fluid">
+              <%- include('../../partials/message.ejs')  %> 
             <!-- Page Heading -->
             <h1 class="h3 mb-4 text-gray-800">Detail Booking Page</h1>
             <!-- End Heading-->
@@ -28,7 +29,7 @@
         <!-- End of Main Content -->
 
         <!-- Footer -->
-       <%- include('../../partials/footer.ejs') %>
+    
         <!-- End of Footer -->
       </div>
       <!-- End of Content Wrapper -->
