--- a/views/admin/dashboard/view_dashboard.ejs
+++ b/views/admin/dashboard/view_dashboard.ejs
@@ -17,7 +17,8 @@
           <!-- Begin Page Content -->
           <div class="container-fluid">
             <!-- Page Heading -->
-            <h1 class="h3 mb-4 text-gray-800">Dashboard Page</h1>
+            <h1 class="h3 mb-4 text-gray-800">Dashboard</h1>
+            <%- include('chart_dashboard.ejs') %> 
           </div>
           <!-- /.container-fluid -->
         </div>
