--- a/views/admin/item/show_table_item.ejs
+++ b/views/admin/item/show_table_item.ejs
@@ -28,7 +28,7 @@
             <tr>
               <td><%= i + 1%></td>
               <td><%= item[i].title %></td>
-              <td><%= item[i].price %></td>
+              <td>$<%= item[i].price %></td>
               <td><%= item[i].country %></td>
               <td><%= item[i].city %></td>
               <td>
